# smolpaste

./: .gitignore  Cargo.toml
src/: main.rs
