[package]
name = "smolpaste"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["multipart", "macros"] }
chrono = "0.4.31"
futures = "0.3.29"
serde = { version = "1.0.192", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["sqlite", "uuid", "runtime-tokio"] }
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io"] }
tower-http = { version = "0.4.4", features = ["mime_guess", "fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
uuid = { version = "1.5.0", features = ["v4", "fast-rng"] }
